tests/parsing/smtlib/v2.7/errors/043_term_bad_term_list_1.smt2
(set-logic ALL)
(assert (foo bar _))
